# libthegamesdb

./: Makefile  README.md  index.html  meson.build  meson_options.txt
.github/workflows/: ci.yml
demo/: TheGamesDBDemo.vala  com.github.avojak.thegamesdb-1.demo.desktop  meson.build
demo/Utils/: EnumUtils.vala
demo/Views/Games/: GamesByName.vala  GamesView.vala
doc/: meson.build
lib/: APIResponse.vala  Client.vala  Errors.vala  GameFieldFlags.vala  GameIncludeFlags.vala  config.vala.in  meson.build
lib/Models/: Game.vala  GameImage.vala  Platform.vala
lib/Requests/: AbstractPagedRequest.vala  AbstractRequest.vala  GamesByNameRequest.vala  Request.vala
lib/Utils/: EnumUtils.vala  JsonUtils.vala
tests/: ClientTest.vala  TestUtils.vala  meson.build  tests.gresource.xml
tests/data/: games-by-name-response.json
thegamesdb-1/: TheGamesDB.AbstractPagedRequest.AbstractPagedRequest.html  TheGamesDB.AbstractPagedRequest.execute.html  TheGamesDB.AbstractPagedRequest.html  TheGamesDB.AbstractRequest.AbstractRequest.html  TheGamesDB.AbstractRequest.execute.html  TheGamesDB.AbstractRequest.html  TheGamesDB.Client.Client.html  TheGamesDB.Client.Client.with_proxy.html  TheGamesDB.Client.DEFAULT_BASE_URL.html  TheGamesDB.Client.api_key.html  TheGamesDB.Client.base_url.html  TheGamesDB.Client.html  TheGamesDB.Client.request.html  TheGamesDB.Client.request_async.html  TheGamesDB.Game.Game.from_json.html  TheGamesDB.Game.Game.html  TheGamesDB.Game.alternative_ids.html  TheGamesDB.Game.boxart.html  TheGamesDB.Game.coop.html  TheGamesDB.Game.developer_ids.html  TheGamesDB.Game.game_title.html  TheGamesDB.Game.genre_ids.html  TheGamesDB.Game.hdd.html  TheGamesDB.Game.html  TheGamesDB.Game.id.html  TheGamesDB.Game.last_updated.html  TheGamesDB.Game.os.html  TheGamesDB.Game.overview.html  TheGamesDB.Game.platform_id.html  TheGamesDB.Game.players.html  TheGamesDB.Game.processor.html  TheGamesDB.Game.publisher_ids.html  TheGamesDB.Game.ram.html  TheGamesDB.Game.rating.html  TheGamesDB.Game.release_date.html  TheGamesDB.Game.sound.html  TheGamesDB.Game.to_string.html  TheGamesDB.Game.video.html  TheGamesDB.Game.youtube.html  TheGamesDB.GameFieldFlags.ALTERNATIVES.html  (+79 more)
